--- a/Prototype/Code/SDL Game.vcxproj.filters
+++ b/Prototype/Code/SDL Game.vcxproj.filters
@@ -139,11 +139,11 @@
     <ClCompile Include="ModuleEnemies.cpp">
       <Filter>Modules</Filter>
     </ClCompile>
-    <ClCompile Include="Enemy.cpp">
-      <Filter>Core</Filter>
-    </ClCompile>
     <ClCompile Include="Enemy_Fish.cpp">
       <Filter>Modules\Enemies</Filter>
+    </ClCompile>
+    <ClCompile Include="Enemy.cpp">
+      <Filter>Modules</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
