--- a/Prototype/Code/SDL Game.vcxproj.filters
+++ b/Prototype/Code/SDL Game.vcxproj.filters
@@ -81,10 +81,10 @@
       <Filter>Modules</Filter>
     </ClInclude>
     <ClInclude Include="Path.h">
-      <Filter>Containers</Filter>
+      <Filter>Modules</Filter>
     </ClInclude>
-    <ClInclude Include="Enemy_Fish.h">
-      <Filter>Modules\Enemies</Filter>
+    <ClInclude Include="Fish.h">
+      <Filter>Modules</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -136,13 +136,13 @@
     <ClCompile Include="ModuleCollision.cpp">
       <Filter>Modules</Filter>
     </ClCompile>
-    <ClCompile Include="ModuleEnemies.cpp">
+    <ClCompile Include="Fish.cpp">
       <Filter>Modules</Filter>
     </ClCompile>
-    <ClCompile Include="Enemy_Fish.cpp">
-      <Filter>Modules\Enemies</Filter>
-    </ClCompile>
     <ClCompile Include="Enemy.cpp">
+      <Filter>Modules</Filter>
+    </ClCompile>
+    <ClCompile Include="ModuleEnemies.cpp">
       <Filter>Modules</Filter>
     </ClCompile>
   </ItemGroup>
