Added Module PowerUPS

--- a/Prototype/Code/SDL Game.vcxproj.filters
+++ b/Prototype/Code/SDL Game.vcxproj.filters
@@ -86,6 +86,9 @@
     <ClInclude Include="Fish.h">
       <Filter>Modules</Filter>
     </ClInclude>
+    <ClInclude Include="ModulePowerUPS.h">
+      <Filter>Modules</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -144,6 +147,9 @@
     </ClCompile>
     <ClCompile Include="ModuleEnemies.cpp">
       <Filter>Modules</Filter>
+    </ClCompile>
+    <ClCompile Include="ModulePowerUPS.cpp">
+      <Filter>Core</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
