--- a/Prototype/Code/SDL Game.vcxproj
+++ b/Prototype/Code/SDL Game.vcxproj
@@ -86,6 +86,7 @@
     <ClInclude Include="ModuleInput.h" />
     <ClInclude Include="ModuleParticles.h" />
     <ClInclude Include="ModulePlayer.h" />
+    <ClInclude Include="ModulePowerUPS.h" />
     <ClInclude Include="ModuleRender.h" />
     <ClInclude Include="ModuleBackground.h" />
     <ClInclude Include="ModuleSceneAir.h" />
@@ -109,6 +110,7 @@
     <ClCompile Include="ModuleInput.cpp" />
     <ClCompile Include="ModuleParticles.cpp" />
     <ClCompile Include="ModulePlayer.cpp" />
+    <ClCompile Include="ModulePowerUPS.cpp" />
     <ClCompile Include="ModuleRender.cpp" />
     <ClCompile Include="ModuleBackground.cpp" />
     <ClCompile Include="ModuleSceneAir.cpp" />
