Added second powerup

--- a/Prototype/Code/SDL Game.vcxproj.filters
+++ b/Prototype/Code/SDL Game.vcxproj.filters
@@ -149,7 +149,7 @@
       <Filter>Modules</Filter>
     </ClCompile>
     <ClCompile Include="ModulePowerUPS.cpp">
-      <Filter>Core</Filter>
+      <Filter>Modules</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
