--- a/Prototype/Code/SDL Game.vcxproj
+++ b/Prototype/Code/SDL Game.vcxproj
@@ -88,14 +88,13 @@
     <ClInclude Include="ModuleInput.h" />
     <ClInclude Include="ModuleParticles.h" />
     <ClInclude Include="ModulePlayer.h" />
-    <ClInclude Include="ModulePLayer2.h" />
+    <ClInclude Include="ModulePlayer2.h" />
     <ClInclude Include="ModulePowerUPS.h" />
     <ClInclude Include="ModuleRender.h" />
     <ClInclude Include="ModuleBackground.h" />
     <ClInclude Include="ModuleSceneAir.h" />
     <ClInclude Include="ModuleSceneWater.h" />
     <ClInclude Include="ModuleTextures.h" />
-    <ClInclude Include="ModuleUI.h" />
     <ClInclude Include="ModuleWelcomeScreen.h" />
     <ClInclude Include="ModuleWindow.h" />
     <ClInclude Include="OrientalGenius.h" />
@@ -124,7 +123,6 @@
     <ClCompile Include="ModuleSceneAir.cpp" />
     <ClCompile Include="ModuleSceneWater.cpp" />
     <ClCompile Include="ModuleTextures.cpp" />
-    <ClCompile Include="ModuleUI.cpp" />
     <ClCompile Include="ModuleWelcomeScreen.cpp" />
     <ClCompile Include="ModuleWindow.cpp" />
     <ClCompile Include="OrientalGenius.cpp" />
