--- a/Prototype/Code/SDL Game.vcxproj.filters
+++ b/Prototype/Code/SDL Game.vcxproj.filters
@@ -55,5 +55,9 @@
     <ClInclude Include="Path.h" />
     <ClInclude Include="ModuleFonts.h" />
     <ClInclude Include="ModulePlayer2.h" />
+    <ClInclude Include="ModuleUI.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ModuleUI.cpp" />
   </ItemGroup>
 </Project>
