--- a/Prototype/Code/SDL Game.vcxproj
+++ b/Prototype/Code/SDL Game.vcxproj
@@ -95,6 +95,7 @@
     <ClInclude Include="ModuleSceneAir.h" />
     <ClInclude Include="ModuleSceneWater.h" />
     <ClInclude Include="ModuleTextures.h" />
+    <ClInclude Include="ModuleUI.h" />
     <ClInclude Include="ModuleWelcomeScreen.h" />
     <ClInclude Include="ModuleWindow.h" />
     <ClInclude Include="OrientalGenius.h" />
@@ -126,6 +127,9 @@
     <ClCompile Include="ModuleWelcomeScreen.cpp" />
     <ClCompile Include="ModuleWindow.cpp" />
     <ClCompile Include="OrientalGenius.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ModuleUI.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
