--- a/Prototype/Code/SDL Game.vcxproj
+++ b/Prototype/Code/SDL Game.vcxproj
@@ -78,6 +78,7 @@
     <ClInclude Include="Fish.h" />
     <ClInclude Include="Globals.h" />
     <ClInclude Include="GREEN.h" />
+    <ClInclude Include="GREEN2.h" />
     <ClInclude Include="MemLeaks.h" />
     <ClInclude Include="Module.h" />
     <ClInclude Include="ModuleAudio.h" />
@@ -108,6 +109,7 @@
     <ClCompile Include="Fish.cpp" />
     <ClCompile Include="Globals.cpp" />
     <ClCompile Include="GREEN.cpp" />
+    <ClCompile Include="GREEN2.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="ModuleAudio.cpp" />
     <ClCompile Include="ModuleCollision.cpp" />
