--- a/Prototype/Code/SDL Game.vcxproj
+++ b/Prototype/Code/SDL Game.vcxproj
@@ -95,6 +95,7 @@
     <ClInclude Include="ModuleBackground.h" />
     <ClInclude Include="ModuleSceneAir.h" />
     <ClInclude Include="ModuleSceneLoose.h" />
+    <ClInclude Include="ModuleSceneTemple.h" />
     <ClInclude Include="ModuleSceneWater.h" />
     <ClInclude Include="ModuleTextures.h" />
     <ClInclude Include="ModuleUI.h" />
@@ -127,6 +128,7 @@
     <ClCompile Include="ModuleBackground.cpp" />
     <ClCompile Include="ModuleSceneAir.cpp" />
     <ClCompile Include="ModuleSceneLoose.cpp" />
+    <ClCompile Include="ModuleSceneTemple.cpp" />
     <ClCompile Include="ModuleSceneWater.cpp" />
     <ClCompile Include="ModuleTextures.cpp" />
     <ClCompile Include="ModuleWelcomeScreen.cpp" />
