--- a/Prototype/Code/SDL Game.vcxproj
+++ b/Prototype/Code/SDL Game.vcxproj
@@ -74,6 +74,9 @@
   <ItemGroup>
     <ClInclude Include="Animation.h" />
     <ClInclude Include="Application.h" />
+    <ClInclude Include="DEMONPEGTOP.h" />
+    <ClInclude Include="DEMONWHEEL.h" />
+    <ClInclude Include="red.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="Fish.h" />
     <ClInclude Include="Globals.h" />
@@ -108,6 +111,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
+    <ClCompile Include="DEMONPEGTOP.cpp" />
+    <ClCompile Include="DEMONWHEEL.cpp" />
+    <ClCompile Include="red.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Fish.cpp" />
     <ClCompile Include="Globals.cpp" />
