Power up first spear added & charge shoot
spear behaviour and movement remaining

--- a/Prototype/Code/SDL Game.vcxproj
+++ b/Prototype/Code/SDL Game.vcxproj
@@ -77,6 +77,7 @@
     <ClInclude Include="DEMONPEGTOP.h" />
     <ClInclude Include="DEMONWHEEL.h" />
     <ClInclude Include="ModuleKatana.h" />
+    <ClInclude Include="ModuleKatanaArrow.h" />
     <ClInclude Include="red.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="Fish.h" />
@@ -115,6 +116,7 @@
     <ClCompile Include="DEMONPEGTOP.cpp" />
     <ClCompile Include="DEMONWHEEL.cpp" />
     <ClCompile Include="ModuleKatana.cpp" />
+    <ClCompile Include="ModuleKatanaArrow.cpp" />
     <ClCompile Include="red.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Fish.cpp" />
