--- a/Prototype/Code/SDL Game.vcxproj
+++ b/Prototype/Code/SDL Game.vcxproj
@@ -76,6 +76,7 @@
     <ClInclude Include="Application.h" />
     <ClInclude Include="DEMONPEGTOP.h" />
     <ClInclude Include="DEMONWHEEL.h" />
+    <ClInclude Include="ModuleAyin.h" />
     <ClInclude Include="ModuleKatana.h" />
     <ClInclude Include="ModuleKatanaArrow.h" />
     <ClInclude Include="red.h" />
@@ -115,6 +116,7 @@
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="DEMONPEGTOP.cpp" />
     <ClCompile Include="DEMONWHEEL.cpp" />
+    <ClCompile Include="ModuleAyin.cpp" />
     <ClCompile Include="ModuleKatana.cpp" />
     <ClCompile Include="ModuleKatanaArrow.cpp" />
     <ClCompile Include="red.cpp" />
