--- a/Prototype/Code/SDL Game.vcxproj.filters
+++ b/Prototype/Code/SDL Game.vcxproj.filters
@@ -35,6 +35,7 @@
     <ClCompile Include="ModuleKatana.cpp" />
     <ClCompile Include="ModuleKatanaArrow.cpp" />
     <ClCompile Include="ModuleAyin.cpp" />
+    <ClCompile Include="CharSelec.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animation.h" />
@@ -76,6 +77,7 @@
     <ClInclude Include="ModuleKatana.h" />
     <ClInclude Include="ModuleKatanaArrow.h" />
     <ClInclude Include="ModuleAyin.h" />
+    <ClInclude Include="CharSelec.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ModuleUI.cpp" />
