--- a/Tengai_Sengoku_Blade/Code/SDL Game.vcxproj
+++ b/Tengai_Sengoku_Blade/Code/SDL Game.vcxproj
@@ -79,6 +79,7 @@
     <ClInclude Include="DEMONWHEEL.h" />
     <ClInclude Include="ModuleAyin.h" />
     <ClInclude Include="ModuleAyinArrow.h" />
+    <ClInclude Include="ModuleAyinUltimate.h" />
     <ClInclude Include="ModuleInterface.h" />
     <ClInclude Include="ModuleKatana.h" />
     <ClInclude Include="ModuleKatanaArrow.h" />
@@ -122,6 +123,7 @@
     <ClCompile Include="DEMONWHEEL.cpp" />
     <ClCompile Include="ModuleAyin.cpp" />
     <ClCompile Include="ModuleAyinArrow.cpp" />
+    <ClCompile Include="ModuleAyinUltimate.cpp" />
     <ClCompile Include="ModuleInterface.cpp" />
     <ClCompile Include="ModuleKatana.cpp" />
     <ClCompile Include="ModuleKatanaArrow.cpp" />
