--- a/Tengai_Sengoku_Blade/Code/SDL Game.vcxproj
+++ b/Tengai_Sengoku_Blade/Code/SDL Game.vcxproj
@@ -83,6 +83,7 @@
     <ClInclude Include="ModuleInterface.h" />
     <ClInclude Include="ModuleKatana.h" />
     <ClInclude Include="ModuleKatanaArrow.h" />
+    <ClInclude Include="Power_Up.h" />
     <ClInclude Include="red.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="Fish.h" />
@@ -115,6 +116,7 @@
     <ClInclude Include="p2Point.h" />
     <ClInclude Include="Path.h" />
     <ClInclude Include="SHARPENER_KNIFE.h" />
+    <ClInclude Include="Ulti_Parchment.h" />
     <ClInclude Include="WinScreen.h" />
   </ItemGroup>
   <ItemGroup>
@@ -128,6 +130,7 @@
     <ClCompile Include="ModuleInterface.cpp" />
     <ClCompile Include="ModuleKatana.cpp" />
     <ClCompile Include="ModuleKatanaArrow.cpp" />
+    <ClCompile Include="Power_Up.cpp" />
     <ClCompile Include="red.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Fish.cpp" />
@@ -156,6 +159,7 @@
     <ClCompile Include="ModuleWindow.cpp" />
     <ClCompile Include="OrientalGenius.cpp" />
     <ClCompile Include="SHARPENER_KNIFE.cpp" />
+    <ClCompile Include="Ulti_Parchment.cpp" />
     <ClCompile Include="WinScreen.cpp" />
   </ItemGroup>
   <ItemGroup>
