--- a/Tengai_Sengoku_Blade/Code/SDL Game.vcxproj.filters
+++ b/Tengai_Sengoku_Blade/Code/SDL Game.vcxproj.filters
@@ -46,6 +46,7 @@
     <ClCompile Include="CHARIOT.cpp" />
     <ClCompile Include="PAGODA.cpp" />
     <ClCompile Include="BALL2.cpp" />
+    <ClCompile Include="DEMON.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animation.h" />
@@ -98,6 +99,7 @@
     <ClInclude Include="CHARIOT.h" />
     <ClInclude Include="PAGODA.h" />
     <ClInclude Include="BALL2.h" />
+    <ClInclude Include="DEMON.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ModuleUI.cpp" />
