--- a/Tengai_Sengoku_Blade/Code/SDL Game.vcxproj.filters
+++ b/Tengai_Sengoku_Blade/Code/SDL Game.vcxproj.filters
@@ -47,6 +47,7 @@
     <ClCompile Include="PAGODA.cpp" />
     <ClCompile Include="BALL2.cpp" />
     <ClCompile Include="DEMON.cpp" />
+    <ClCompile Include="Coin.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animation.h" />
@@ -100,6 +101,7 @@
     <ClInclude Include="PAGODA.h" />
     <ClInclude Include="BALL2.h" />
     <ClInclude Include="DEMON.h" />
+    <ClInclude Include="Coin.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ModuleUI.cpp" />
